<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="11">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Resign Letter"
            android:textColor="#DD6A79"
            android:textSize="25sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">

        <LinearLayout
            android:id="@+id/main_resignApplication"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:background="#FFFFFF"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/header_resign_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/application_head"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/application_resign"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/bodytextId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/application_res"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/date_linearid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/joining_date"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:editable="false"
                            android:focusable="false"
                            android:hint="Effective Date"
                            android:longClickable="false"
                            android:textColor="#000000" />

                        <ImageView
                            android:id="@+id/effective_calenderid"
                            android:layout_width="50dp"
                            android:layout_height="30dp"
                            android:layout_alignEnd="@+id/joining_date"
                            android:layout_alignRight="@+id/joining_date"
                            android:layout_centerInParent="true"
                            android:src="@drawable/calender_ic" />
                    </RelativeLayout>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/text_back">

                    <ImageView
                        android:id="@+id/signeture_image"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:scaleType="centerCrop" />

                    <TextView
                        android:id="@+id/img_textid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@+id/signeture_image"
                        android:layout_alignLeft="@id/signeture_image"
                        android:layout_alignRight="@+id/signeture_image"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="2dp"
                        android:text="Attatched Signeture"
                        android:textColor="#C5C5BD" />
                </RelativeLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="\nYour obedient"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/leave_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="Md. Monir Hossain"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/leave_designition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="Designition: "
                android:textSize="15sp" />

            <TextView
                android:id="@+id/leave_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="Area: "
                android:textSize="15sp" />

            <TextView
                android:id="@+id/leave_workplace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="Work Place: "
                android:textSize="15sp" />

            <TextView
                android:id="@+id/leave_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="Phone Number: "
                android:textSize="15sp" />

            <TextView
                android:id="@+id/leave_shop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="Shop Name: "
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/update_back">

            <TextView
                android:id="@+id/apply_resigntext_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ripple_effect"
                android:gravity="center"
                android:padding="10sp"
                android:text="Apply "
                android:textColor="#ffffff" />
        </LinearLayout>


        <TextView
            android:id="@+id/vivoteam_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:gravity="bottom"
            android:text="\u0040 vivo Barishal Team"
            android:textColor="#DF475B"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>